# wifi-mac

./: CMakeLists.txt  LICENSE  README.md
include/: aggregation.h  block_ack.h  dcf.h  dcf_sched.h  edca.h  edca_sched.h  edca_triggers.h  hcca.h  mac_arch.h  mac_common.h  pcf.h  rate_control.h  rng.h  rts_cts.h  seq_num.h  tx_constraints.h
src/: aggregation.c  block_ack.c  dcf.c  dcf_sched.c  demo.c  edca.c  edca_sched.c  hcca.c  pcf.c  rate_control.c  rts_cts.c  seq_num.c  tx_constraints.c
tests/: test_aggregation.c  test_block_ack.c  test_dcf.c  test_edca.c  test_edca_triggers.c  test_hcca.c  test_pcf.c  test_rate_control.c  test_rts_cts.c  test_seq_num.c  test_tx_constraints.c  test_util.h
